--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.14.1",
     "pinia": "^2.1.7",
     "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
+    "vuefire": "^3.2.0",
     "vuetify": "^3.7.2"
   },
   "devDependencies": {
