--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "firebase": "^10.14.1",
+    "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
     "uid": "^2.0.2",
     "vee-validate": "^4.13.2",
